--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <header>
         <h1>ESTE ES EL HEADER</h1>
     </header>
-    
+    <footer>
+        <h2>ESTE ES EL FOOTER</h2>
+    </footer>
 </body>
 </html>
